Fixed btn hover on mobile

--- a/app/javascript/stylesheets/home.scss
+++ b/app/javascript/stylesheets/home.scss
@@ -190,6 +190,12 @@
   border: none;
 }
 
+@media (hover: none) {
+  .social-icon {
+     background-color: none;
+   }
+}
+
 @include media-breakpoint-up(xs) {
   .card-body{
     padding: 0.5rem;
